--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -15,6 +15,7 @@ body{
     border-radius: 10px;
     margin-bottom: 1%;
     box-shadow: 0 0 10px rgb(119, 119, 119);
+    font-size: 30px;
 }
 .dachbord{
     display: flex;
@@ -41,6 +42,9 @@ body{
     border-radius: 10px;
     margin-bottom: 0;
 
+}
+.dachbord_all_d h2{
+    color: orange;
 }
 
 .info{
@@ -89,6 +93,9 @@ input{
     outline: none;
     border: 0;
     box-shadow: 0 0 5px gray;
+    font-size: 16px;
+    font-weight: 700;
+    padding-left: 5px;
 }
 
 
@@ -170,4 +177,5 @@ input{
     width: 100%;
     height: 40px;
     margin-bottom: 3%;
+    
 }
