--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -565,6 +565,9 @@ input{
     width: 30%;
     padding-right: 5%;
 }
+.consultant_home_1_1_1 input{
+    text-align: center;
+}
 .consultant_home_1_1_2{
     display: flex;
     flex-direction: column;
@@ -661,4 +664,175 @@ input{
     padding-left: 2%;
     margin-top: 3%;
 
+}
+
+/*----------------------------------------consultant prosress---------------------------------*/
+.consultant1_home2_progress{
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+}
+.consultant1_home2_progress input{
+    height: 35px;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+.consultant1_home2_progress textarea{
+    height: 50px;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+.report_bt{
+    display: flex;
+    justify-content: end;
+    
+}
+.report_bt button{
+    text-align: center;
+    border: 0;
+    background-color: rgb(91, 136, 232);
+    color: white;
+    padding: 1%;
+}
+.consultant_progress_head{
+    text-align: center;
+    font-size: 20px;
+}
+.consultant_progress_1{
+    display: flex;
+    box-shadow: 0 0 5px gray;
+    padding: 3%;
+    margin-top: 1%;
+    margin-bottom: 3%;
+    border-radius: 10px;
+}
+.consultant_progress_1_left{
+    width: 70%;
+}
+.consultant_progress_1_left_top{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3%;
+    padding-right: 10%;
+}
+.consultant_progress_1_left_bottom{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.consultant_progress_1_left_bottom_img{
+
+}
+.consultant_progress_1_left_bottom img{
+    width: 100px;
+    border-radius: 50%;
+    margin-right: 3%;
+}
+.consultant_progress_1_right{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+.consultant_progress_1_right p{
+    font-size: 12px;
+}
+.consultant_progress_2{
+    box-shadow: 0 0 5px gray;
+    padding: 2%;
+    margin-bottom: 3%;
+    border-radius: 10px;
+}
+.consultant_progress_2_1{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 100%;
+    background-color: rgb(217, 217, 217);
+    height: 30px;
+}
+.consultant_progress_2_2{
+    width: 10%;
+    background: linear-gradient(to right,rgb(7, 220, 89),rgb(86, 195, 86));
+    height: 30px;
+}
+.consultant_progress_3{
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    box-shadow: 0 0 5px gray;
+    margin-bottom: 3%;
+    border-radius: 10px;
+}
+.consultant_progress_3_head{
+    display: flex;
+    justify-content: space-between;
+}
+.consultant_progress_3_head button{
+    text-align: center;
+    padding: 1%;
+    align-content: center;
+    width: 130px;
+    background-color: rgb(93, 228, 45);
+    color: white;
+    border: 0;
+}
+.consultant_progress_3_download{
+    margin-top: 1%;
+    margin-bottom: 2%;
+    display: flex;
+    height: 50px;
+}
+.consultant_progress_3_download_1{
+    text-decoration: none;
+    align-content: center;
+    background-color: gray;
+    color: white;
+    padding-left: 2%;
+    padding-right: 2%;
+
+
+}
+.consultant_progress_3_download_2{
+    height: 97%;
+    width: 100%;
+    border: 1px solid black;
+}
+.consultant_progress_4{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.consultant_progress_4_all{
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    box-shadow: 0 0 5px gray;
+    margin: 2%;
+    border-radius: 10px;
+}
+.consultant_progress_4_all_head{
+ display: flex;
+ justify-content: space-between;
+}
+.consultant_progress_4_all_head_right{
+    background-color: rgb(203, 199, 199);
+    color: white;
+    text-align: center;
+    align-content: center;
+    padding: 2%;
+    border-radius: 5px;
+}
+.consultant_progress_4_download{
+    margin-top: 1%;
+    margin-bottom: 2%;
+    display: flex;
+}
+.consultant_progress_4_download_1{
+    text-decoration: none;
+    padding: 3%;
+    background-color: gray;
+    color: white;
+
+}
+.consultant_progress_4_download_2{
+    height: 98%;
+    width: 100%;
+    border: 1px solid black;
 }
