--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -6,6 +6,7 @@ body{
     background: linear-gradient(to bottom,rgb(242, 206, 141),rgb(250, 184, 61),orange);
     min-height: 100vh;
 }
+
 .head_all{
     background-color: white;
     margin: 3%;
@@ -52,6 +53,14 @@ body{
     display: flex;
     justify-content: space-between;
 }
+@media (max-width: 1024px){
+    .info{
+    display: flex;
+    font-size: 10px;
+}
+    
+}
+
 .navside_all{
     background-color: white;
     padding: 3%;
@@ -64,6 +73,7 @@ body{
     position: sticky;
     top: 0;
 }
+
 .navside_all :hover{
         border-left: 5px solid orange;
     background-color: antiquewhite;
@@ -99,6 +109,7 @@ input{
     font-weight: 500;
     padding-left: 5px;
 }
+
 
 
 /*----------------------------------------profile---------------------------------*/
