--- a/Assignment/css/style.css
+++ b/Assignment/css/style.css
@@ -13,6 +13,7 @@ body{
 
 
 
+
 /*---------------------------Login index page-------------------------------------------*/
 /*---------------------------nav-----------------------------*/
 nav{
@@ -26,14 +27,41 @@ nav{
     align-content: center;
 }
 .nav_left img{
-    width: 100%;
+    width: 80px;
     height: 80px;
     border-radius: 50%;
 }
+@media (max-width: 1024px){
+    .nav_left img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+}
+@media (max-width: 767px){
+    .nav_left img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}}
 .nav_left_txt{
     align-content: center;
     padding-left: 5%;
     font-size: 20px;
+}
+@media (max-width: 1024px){
+    .nav_left_txt{
+    align-content: center;
+    padding-left: 5%;
+    font-size: 18px;
+}
+}
+@media (max-width: 767px){
+    .nav_left_txt{
+    align-content: center;
+    padding-left: 5%;
+    font-size: 12px;
+}
 }
 .nav_head{
     width: 30%;
@@ -61,6 +89,16 @@ nav{
     border: 3px solid rgb(254, 127, 0);
     background: linear-gradient(rgb(255, 129, 11),rgb(234, 188, 82));
 }
+@media (max-width: 1024px){
+    .nav_head a{
+        font-size: 15px;
+    }
+}
+@media (max-width: 767px){
+    .nav_head a{
+        font-size: 13px;
+    }
+}
 
 
 
@@ -76,8 +114,21 @@ header{
     margin-top: 0%;
     margin-bottom: 2%;
     color: white;
+    font-size: 100%;
 }
 
+@media (max-width: 1024px){
+    header{
+        height: vh;
+        font-size: 15px;
+    }
+}
+@media (max-width: 600px){
+    header{
+        height: 15vh;
+        font-size: 12px;
+    }
+}
 
 
 /*---------------------------section-----------------------------*/
@@ -130,6 +181,16 @@ header{
     display: flex;
     flex-direction: column;
     border-radius: 20px;
+}
+@media (max-width: 1024px){
+    .login{
+        width: 80%;
+    }
+}
+@media (max-width: 767px){
+    .login{
+        width: 90%;
+    }
 }
 
 .log_head{
@@ -189,5 +250,4 @@ header{
     background-color: rgb(250, 59, 59);
     color: white;
 }
-
 
