--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -282,7 +282,7 @@ input{
     margin-left: 2%;
     margin-right: 2%;
     height: 35px;
-    width: 70%;
+    width: 90%;
 }
 .proposal_status_section input[type="date"]{
     margin-top: 1%;
@@ -297,6 +297,21 @@ input{
     height: 35px;
     margin-top: 1%;
     margin-bottom: 1%;
+}
+.proposal_status_section_2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.proposal_status_section_2_all{
+    display: flex;
+}
+.proposal_status_section_2_left{
+    width: 15%;
+    align-content: center;
+}
+.proposal_status_section_2_right{
+    width: 85%;
 }
 
 .proposal_status_section_3{
@@ -537,6 +552,15 @@ input{
     border: 0;
     background-color: rgb(61, 191, 61);
     color: white;
+}
+
+.results input[type="text"]{
+    margin-bottom: 2%;
+    margin-top: 1%;
+    margin-left: 2%;
+    margin-right: 2%;
+    height: 35px;
+    width: 90%;
 }
 
 /*----------------------------------------consultant 1---------------------------------*/
