--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -269,6 +269,9 @@ input{
     padding-left: 2%;
     margin: 1%;
 }
+.proposal_status p{
+    font-size: 100%;
+}
 .proposal_status_section_{
     box-shadow: 0 0 10px gray;
     padding: 2%;
@@ -307,12 +310,12 @@ input{
     display: flex;
 }
 .proposal_status_section_2_left{
-    width: 15%;
+    width: 18%;
     align-content: center;
     
 }
 .proposal_status_section_2_right{
-    width: 85%;
+    width: 82%;
     padding-left: 2%;
 }
 
@@ -1002,7 +1005,15 @@ input{
     border-radius: 50%;
     margin-right: 3%;
 }
-
+.proposal_status_section_2_left{
+    width: 20%;
+    align-content: center;
+    
+}
+.proposal_status_section_2_right{
+    width: 80%;
+    padding-left: 2%;
+}
 }
 
 @media (max-width: 768px) {
@@ -1094,6 +1105,15 @@ input{
     box-shadow: 0 0 5px gray;
     margin: 2%;
     border-radius: 10px;
+}
+.proposal_status_section_2_left{
+    width: 26%;
+    align-content: center;
+    
+}
+.proposal_status_section_2_right{
+    width: 74%;
+    padding-left: 2%;
 }
 }
 
@@ -1203,6 +1223,12 @@ input{
 .progress_all{
     display: grid; 
 }
+.results p{
+    font-size: 12px;
+}
+.proposal_status p{
+    font-size: 12px;
+}
 .progress_all_{
     margin: 2%; 
     width: 92%;
@@ -1245,5 +1271,14 @@ input{
 .consultant_progress_1_left_bottom{
     display: flex;
     flex-direction: column;
+}
+.proposal_status_section_2_left{
+    width: 25%;
+    align-content: center;
+    
+}
+.proposal_status_section_2_right{
+    width: 75%;
+    padding-left: 2%;
 }
 }
