--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -601,8 +601,8 @@ input{
     margin-top: 1%;
 }
 .consultant_home_1_1_1 img{
-    margin-left: 30%;
-    width: 40%;
+    margin-left: 13%;
+    width: 80px;
     border-radius: 50%;
     margin-top: 10%;
     margin-bottom: 5%;
