--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -601,14 +601,14 @@ input{
     margin-top: 1%;
 }
 .consultant_home_1_1_1 img{
-    width: 80px;
+    margin-left: 30%;
+    width: 40%;
+    height: auto;
     border-radius: 50%;
     margin-top: 10%;
     margin-bottom: 5%;
 }
 .consultant_home_1_1_1{
-    align-items: center;
-    justify-items: center;
     text-align: center;
     display: flex;
     flex-direction: column;
