--- a/Assignment/css/style.css
+++ b/Assignment/css/style.css
@@ -211,6 +211,9 @@ header{
     flex-direction: row;
     align-items: center;
 }
+.nav_head a{
+    font-size: 14px;
+}
 }
 @media (max-width: 768px){
 header{
