--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -905,10 +905,11 @@ input{
     width: 100%;
 }
 
-/*----------------------------------------subject 2---------------------------------*/
+/*----------------------------------------subject 2--------มีหน้ากรรมการรวมอยู่ด้วย-------------------------*/
 .subject_1{
     padding: 3%;
 }
+
 .subject_1 h3{
     padding-left: 3%;
     border-left: 5px solid orange;
@@ -924,6 +925,7 @@ input{
 }
 .table input{
     width: 90%;
+    margin-top: 2%;
 }
 .table_1_1{
     height: 50px;
@@ -938,9 +940,10 @@ input{
     display: flex;
 }
 .table_1_bt{
-    text-align: end;
     height: 29px;
     align-content: center;
+    display: flex;
+    justify-content: end;
 }
 .table_1_bt button{
     width: 150px;
@@ -1032,9 +1035,76 @@ input{
 
 
 
+/*----------------------------------------director--1------------------------------*/
+
+.director {
+    padding: 3%;
+}
+
+.director_1{
+    box-shadow: 0 0 10px gray;
+    border-radius: 10px;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+}
+
+.director_1 textarea {
+    margin-bottom: 2%;
+}
+
+.director_1 input {
+    margin-top: 1%;
+    margin-bottom: 2%;
+    height: 35px;
+}
+
+.director_1 p {
+    font-size: 12px ;
+}
+
+.director_ok {
+    display:flex ;
+    align-items: center;
+}
+
+.director_ok p {
+    font-size: 13px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+
+}
+
+.director_ok input {
+    box-shadow: 0 0 0 ;
+    margin-left: 3%;
+    margin-right: 1%
+
+}
 
 
+/*----------------------------------------director----3------------------------------*/
+.director_download{
+    margin-top: 1%;
+    margin-bottom: 2%;
+    display: flex;
+    height: 30px;
+}
+.director_download_1{
+    text-decoration: none;
+    align-content: center;
+    background-color: gray;
+    color: white;
+    padding-left: 2%;
+    padding-right: 2%;
 
+
+}
+.director_download_2{
+    height: 97%;
+    width: 100%;
+    border: 1px solid black;
+}
 
 
 
