--- a/Assignment/css/style.css
+++ b/Assignment/css/style.css
@@ -91,7 +91,9 @@ header{
     border-radius: 10px;
     margin-bottom: 3%;
 }
-
+.s_index0{
+    text-align: end;
+}
 .s_index1{
     text-align: center;
     margin-bottom: 1%;
@@ -188,6 +190,23 @@ header{
     height: 50px;
 }
 
+/*---------------------------Login list-------------------------------------------*/
+.select{
+    display: flex;
+    justify-content: end;
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+    border: 2px solid rgb(225, 182, 104);
+}
+td{
+    padding-left: 2%;
+}
+.table_head{
+    background-color: rgb(239, 168, 35);
+    color: white;
+}
 
 
 
