--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -10,6 +10,62 @@ body{
     display: flex;
     flex-direction: column;
 }
+nav{
+    display: flex;
+    padding: 0%;
+    padding-left: 3%;
+    margin: 0;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: rgb(249, 246, 242);
+    margin-bottom: 2%;
+    border-bottom: 1px solid gray;
+}
+.nav_left{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+}
+.nav_left_img{
+    align-content: center;
+    margin-right: 2%;
+    
+}
+.nav_left img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
+
+
+.nav_head{
+    width: 30%;
+    justify-content: end;
+    display: flex;
+    min-height: 0vh;
+    align-items: center;
+    margin-right: 3%;
+}
+.nav_head :hover{
+    background: white;
+    color: black;
+    box-shadow: 0 0 10px rgb(130, 130, 130);
+}
+.nav_head a{
+    text-decoration: none;
+    padding: 1%;
+    align-content: center;
+    margin-left: 3%;
+    height: 20px;
+    border-radius: 10px;
+    width: 150px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    background: linear-gradient(rgb(255, 129, 11),rgb(234, 188, 82));
+}
 
 .head_all{
     background-color: white;
@@ -21,6 +77,7 @@ body{
     margin-bottom: 1%;
     box-shadow: 0 0 10px rgb(119, 119, 119);
     font-size: 30px;
+    margin-top: 0;
 }
 .dachbord{
     display: flex;
@@ -30,7 +87,7 @@ body{
 }
 .dachbord_txt{
     text-align: center;
-    margin: 1%;
+    margin: 0%;
 }
 .dachbord_all{
     display: flex;
@@ -69,7 +126,7 @@ body{
     height: 60vh;
     box-shadow: 0 0 10px rgb(119, 119, 119);
     position: sticky;
-    top: 0;
+    top: 50px;
 }
 .navside_all_2{
     background-color: white;
@@ -81,7 +138,7 @@ body{
     height: 60vh;
     box-shadow: 0 0 10px rgb(119, 119, 119);
     position: sticky;
-    top: 0;
+    top: 50px;
 }
 
 .navside_all :hover{
