--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -982,6 +982,9 @@ input{
     width: 90%;
     margin-top: 2%;
 }
+.table_1{
+    margin: 1%;
+}
 .table_1_1{
     height: 50px;
     align-content: end;
