--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -187,12 +187,12 @@ input{
     display: flex;
     flex-direction: column;
     padding-bottom: 3%;
+    padding: 2%;
 }
 
 .profile_head{
     font-size: 25px;
     margin-top: 2%;
-    width: 100%;
     text-align: center;
     align-content: center;
 }
@@ -206,9 +206,9 @@ input{
     display: flex;
     flex-direction: column;
     padding-left: 3%;
+
 }
 .profile_section input{
-    width: 100%;
     height: 40px;
     margin-bottom: 3%;
     margin-top: 1%;
@@ -216,6 +216,8 @@ input{
 
 .profile_section_1{
     padding-right: 3%;
+    display: flex;
+    flex-direction: column;
 }
 .profile_section_2{
     display: flex;
@@ -231,7 +233,7 @@ input{
     padding-right: 3%;
 }
 .profile_footer{
-    width: 100%;
+
     min-height: 0vh;
 }
 .profile_footer_1{
