--- a/Assignment/css/all.css
+++ b/Assignment/css/all.css
@@ -642,6 +642,7 @@ input{
     box-shadow: 0 0 5px gray;
     border-radius: 10px;
 }
+
 #consultant_home1 h3{
     border-left: 10px solid orange;
     margin-left: 3%;
@@ -664,7 +665,6 @@ input{
 
 .consultant_home_1_1_1 img{
     width: 60%;
-    background-color: rgb(206, 206, 206);
     border-radius: 50%;
     margin-top: 10%;
     margin-bottom: 5%;
@@ -1279,6 +1279,9 @@ input{
     height: 12vh;
 }
 h4{
+    font-size: 12px;
+}
+h3{
     font-size: 12px;
 }
 .info{
